blog: fix pre word wrap

--- a/blog/index.css
+++ b/blog/index.css
@@ -81,6 +81,12 @@ details {
 p,
 pre {
   color: #444445;
+  overflow-x: auto !important;
+  white-space: pre-wrap !important; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+  white-space: -pre-wrap !important; /* Opera 4-6 */
+  white-space: -o-pre-wrap !important; /* Opera 7 */
+  word-wrap: break-word !important; /* Internet Explorer 5.5+ */
 }
 
 pre {
